# fortran-activation-function

./: README.md
src/: imp_add_to_one.f90  imp_cdf_std_normal.f90  imp_der_gelu.f90  imp_der_log_sigmoid.f90  imp_der_lrelu.f90  imp_der_prelu.f90  imp_der_relu.f90  imp_der_silu.f90  imp_der_softplus.f90  imp_der_softsign.f90  imp_der_std_sigmoid.f90  imp_der_tanh.f90  imp_divide_by_sqrt2.f90  imp_gelu.f90  imp_half.f90  imp_inverse.f90  imp_log_sigmoid.f90  imp_lrelu.f90  imp_pdf_std_normal.f90  imp_prelu.f90  imp_relu.f90  imp_silu.f90  imp_softplus.f90  imp_softsign.f90  imp_softsign_denominator.f90  imp_std_sigmoid.f90  imp_std_step.f90  imp_subtract_from_one.f90  inc_cdf_std_normal.f90  inc_der_gelu.f90  inc_der_log_sigmoid.f90  inc_der_silu.f90  inc_der_softplus.f90  inc_der_softsign.f90  inc_der_std_sigmoid.f90  inc_der_tanh.f90  inc_gelu.f90  inc_log_sigmoid.f90  inc_silu.f90  inc_softplus.f90  (+5 more)
test/: CMakeLists.txt  README.md
test/src/: main.f90
test/src/pkg_test_function/: imp_generate_input.f90  imp_plot_function.f90  module.f90
